# VhsicHdl

./: .gitignore  Cargo.toml  README.md  pacman.sh  vhdllog.txt  vhdlsetup.txt
frontend/: Cargo.toml
frontend/src/: ghdl_runner.rs  main.rs
src/: ghdl_runner.rs  main.rs
